2014-05-22  Kostya Serebryany  <konstantin.s.serebryany@gmail.com>

	* crypt/md5-crypt.c (__md5_crypt_r): Remove a nested function.
	(b64_from_24bit): New function.

2014-05-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/multiarch/memchr.c (memchr): Remove
	libc_hidden_builtin_def to ifunc.
	* sysdeps/powerpc/powerpc32/power4/multiarch/memchr-ppc32.c
	[libc_hidden_builtin_def]: Define hidden definition to __memchr_ppc32.

2014-05-16  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/aarch64/arch-fork.h: New file.
	* sysdeps/unix/sysv/linux/aarch64/nptl/fork.c: File removed.

2014-05-21  Joseph Myers  <joseph@codesourcery.com>

	* nscd/Depend (linuxthreads): Remove.
	(nptl): Add.
	* resolv/Depend (linuxthreads): Remove.
	* rt/Depend (linuxthreads): Remove.

	* Makeconfig [$(build-hardcoded-path-in-tests) = yes]
	(rtld-tests-LDFLAGS): Use $(elf-objpfx) instead of
	$(common-objpfx)elf/.
	(link-libc-before-gnulib): Likewise.
	(elfobjdir): Remove variable.
	* Makefile (install): Use $(elf-objpfx) instead of
	$(common-objpfx)elf/.
	* Makerules (link-libc-args): Use $(elf-objpfx) instead of
	$(elfobjdir)/.
	(link-libc-deps): Likewise.
	($(common-objpfx)libc.so): Likewise.
	($(common-objpfx)linkobj/libc.so): Likewise.
	[$(cross-compiling) = no] (symbolic-link-prog): Use $(elf-objpfx)
	instead of $(common-objpfx)elf/.
	(symbolic-link-list): Likewise.
	* iconvdata/Makefile ($(inst_gconvdir)/gconv-modules)
	[$(cross-compiling) = no]: Likewise.
	* sysdeps/arm/Makefile (gnulib-arch): Use $(elf-objpfx) instead of
	$(elfobjdir)/.
	(static-gnulib-arch): Likewise.
	* sysdeps/s390/s390-64/Makefile ($(inst_gconvdir)/gconv-modules)
	[$(cross-compiling) = no]: Use $(elf-objpfx) instead of
	$(common-objpfx)elf/.

2014-05-21  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/aarch64/nptl/sysdep-cancel.h
	(SINGLE_THREAD_P): Use the correct width load.  Fold
	into the ldr offset.
